--- a/package.json
+++ b/package.json
@@ -5,8 +5,11 @@
   "dependencies": {
     "@material-ui/core": "^1.0.0",
     "@material-ui/icons": "^1.0.0",
+    "apollo-client": "^2.3.5",
+    "graphql-tag": "^2.9.2",
     "mdi-react": "^3.4.0",
     "react": "^16.3.2",
+    "react-apollo": "^2.1.6",
     "react-dom": "^16.3.2",
     "react-redux": "^5.0.7",
     "react-router-dom": "^4.2.2",
