--- a/package.json
+++ b/package.json
@@ -5,7 +5,10 @@
   "dependencies": {
     "@material-ui/core": "^1.0.0",
     "@material-ui/icons": "^1.0.0",
+    "apollo-cache-inmemory": "^1.2.5",
     "apollo-client": "^2.3.5",
+    "apollo-link-http": "^1.5.4",
+    "graphql": "^0.13.2",
     "graphql-tag": "^2.9.2",
     "mdi-react": "^3.4.0",
     "react": "^16.3.2",
