--- a/package.json
+++ b/package.json
@@ -10,7 +10,6 @@
     "apollo-link-http": "^1.5.4",
     "graphql": "^0.13.2",
     "graphql-tag": "^2.9.2",
-    "html-react-parser": "^0.4.6",
     "mdi-react": "^3.4.0",
     "react": "^16.3.2",
     "react-apollo": "^2.1.6",
@@ -19,8 +18,7 @@
     "react-router-dom": "^4.2.2",
     "react-scripts": "1.1.4",
     "redux": "^4.0.0",
-    "redux-thunk": "^2.3.0",
-    "showdown": "^1.8.6"
+    "redux-thunk": "^2.3.0"
   },
   "scripts": {
     "start": "react-scripts start",
