Tested with dummy data

--- a/server_graphql/staticData/projects.json
+++ b/server_graphql/staticData/projects.json
@@ -77,7 +77,7 @@
                                 "code": "https://www.projectongithub.io"
                         }
                 ],
-                "category": "Web Development"
+                "category": "Machine Learning"
         },
         {
                 "contributors": [
@@ -157,6 +157,6 @@
                                 "code": "https://www.projectongithub.io"
                         }
                 ],
-                "category": "Web Development"
+                "category": "Graphic Design"
         }
 ]
